microservices/service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-webui
  labels:
    app: teastore
    run: teastore-webui
    release: 1.3.0
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: teastore-webui
