microservices/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: teastore
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
