microservices/teastore-locust-policy-dns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ts-locust-policy-dns
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-locust
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
