microservices/teastore-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ts-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: teastore
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - podSelector:
        matchLabels:
          app: teastore
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 3306
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 9053
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-locust
    - podSelector:
        matchLabels:
          app: teastore
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 3306
