microservices/teastore-policy2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: teastore-policy2
  namespace: teastore
spec:
  podSelector:
    matchLabels:
      app: teastore
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          run: teastore-locust
    - podSelector:
        matchLabels:
          app: teastore
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-locust
    - podSelector:
        matchLabels:
          app: teastore
