microservices/ts-networkpolicy.yaml


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-registry
    - podSelector:
        matchLabels:
          run: teastore-persistence
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: teastore-registry
    - podSelector:
        matchLabels:
          run: teastore-persistence
    - namespaceSelector:
        matchLabels:
          role: admin
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-registry-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-registry
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: teastore
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          app: teastore


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-persistence-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-persistence
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: teastore
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          app: teastore


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-auth
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: teastore
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          app: teastore


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-image-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-image
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: teastore
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          app: teastore

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-recommender-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-recommender
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-persistence
    - podSelector:
        matchLabels:
          run: teastore-registry
    - podSelector:
        matchLabels:
          run: teastore-db
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: teastore-persistence
    - podSelector:
        matchLabels:
          run: teastore-registry
    - podSelector:
        matchLabels:
          run: teastore-db
    - namespaceSelector:
        matchLabels:
          role: admin

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webui-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-webui
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: teastore
    - podSelector:
        matchLabels:
          run: teastore-locust          
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: teastore
    - podSelector:
        matchLabels:
          run: teastore-locust
    - namespaceSelector:
        matchLabels:
          role: admin

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-locust-to-webui
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-locust
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-webui
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          run: teastore-webui
