microservices/ts-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webui-access
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-webui
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: teastore
    - podSelector:
        matchLabels:
          run: teastore-locust
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: teastore
    - podSelector:
        matchLabels:
          run: teastore-locust
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-locust-to-webui
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: teastore-locust
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-webui
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: teastore-webui
